# DataManip

./: CODE_OPTIMIZATION_SUMMARY.md  CONSOLIDATION_SUMMARY.md  CONTRIBUTING.md  DEFAULT_EXAMPLE.md  FORMULA_ENGINE_IMPROVEMENTS.md  LANGUAGE_SYSTEM.md  MANIFEST.in  MISSING_FEATURES.md  MISSING_FEATURES_FROM_LEGACY.md  PERFORMANCE_OPTIMIZATION.md  PROJECT.md  README.md  README_DATATABLE_V2.md  REBASE_REVIEW.md  REFACTORING_SUMMARY.md  RELEASE_NOTE.md  RELEASE_NOTES.md  REVIEW_SUMMARY.md  ROADMAP.md  STRUCTURE_REFACTORING_2025.md  TECHNICAL_DEBT.md  TODO.md  UI_IMPROVEMENTS.md  config.json  convert_examples.py  count_lines.py  demo_datatable_v2.py  examples_datatable_v2.py  fix_escapes.py  projectile_motion_comprehensive.csv  projectile_motion_comprehensive.xlsx  pyproject.toml  regenerate_examples.md  setup.py  test_all_features.py  test_autorow.py  test_edit_dialog.py  test_examples.py  test_interpolation.py  test_optimizations.py  (+5 more)
.github/: copilot-instructions.md
.github/workflows/: publish.yml  test.yml  tests.yml
assets/: contributors.json
assets/lang/: en_US.json  fr_FR.json
docs/: ARCHITECTURE_REFACTORING.md  datatable_v2_dialogs.md  uncertainty_propagation.md
examples/: 01_basic_introduction.dmw  01_simple_pendulum.dmw  02_constants_and_formulas.dmw  02_resistor_network.dmw  03_free_fall.dmw  03_ranges_and_derivatives.dmw  04_inclined_plane.dmw  04_uncertainty_propagation.dmw  05_custom_functions.dmw  05_density_measurement.dmw  06_calculated_constants.dmw  06_damped_oscillation.dmw  07_advanced_kinematics.dmw  07_calorimetry.dmw  08_photoelectric_effect.dmw  09_spring_mass_shm.dmw  README.md  basic_usage.py  complete_workflow.py  comprehensive_demo.py  core_api_example.py  custom_formulas.py  derivative_example.py  derivative_uncertainty_demo.dmw  derivative_uncertainty_example.py  generate_examples.py  performance_benchmark.py  projectile_motion.py  projectile_motion_advanced.py  uncertainty_demo.py  verify_calculations.py
src/: __init__.py  __main__.py  constants.py  main.py
src/config/: __init__.py  app_config.py  model_config.py
src/constants/: __init__.py  column_types.py  symbols.py  units.py
src/core/: __init__.py  data_object.py  exceptions.py  formula_engine.py  study.py  undo_manager.py  workspace.py
src/datamanip/: __init__.py  main.py
src/models/: __init__.py  column_registry.py  data_store.py  formula_engine.py
src/studies/: __init__.py  data_table_study.py  plot_study.py  statistics_study.py
src/ui/: __init__.py  language_dialog.py  main_window.py  message_boxes.py  notification_manager.py  notifications.py  preferences_dialog.py
src/utils/: __init__.py  base_dialogs.py  commands.py  constants.py  example_data.py  formula_parser.py  lang.py  logging_config.py  qt_helpers.py  uncertainty.py  uncertainty_propagation.py  unit_simplification.py  units.py  validators.py
src_legacy/: __init__.py
tests/: __init__.py  conftest.py  manual_test_plot.py  test_sample.py
(+171 files in other folders)
