[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "datamanip"
version = "0.1.0"
description = "An open-source data manipulation software for experimental sciences"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.7",
    "numpy>=2.3.4",
    "pyside6>=6.10.0",
]

[project.scripts]
datamanip = "datamanip.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src/datamanip"]
