[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "datamanip"
version = "0.1.0"
description = "An open-source data manipulation software for experimental sciences"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.7",
    "numpy>=2.3.4",
    "openpyxl>=3.1.0",
    "pandas>=2.3.3",
    "pint>=0.25.2",
    "pyside6>=6.10.0",
    "scipy>=1.16.3",
    "sympy>=1.14.0",
]

[project.scripts]
datamanip = "main:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[dependency-groups]
dev = [
    "pytest>=9.0.1",
    "pytest-cov>=7.0.0",
]
